--- a/ProductCatalogService/ProductCatalogService.csproj
+++ b/ProductCatalogService/ProductCatalogService.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="3.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Constant\" />
   </ItemGroup>
 
 </Project>
