--- a/ProductCatalogService/appsettings.json
+++ b/ProductCatalogService/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ProductsDatabase": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "ECommerce",
+        "ProductsCollectionName": "Products"
+    },
+    "AllowedHosts": "*"
 }
