ALL OMG I FINISHED IT

--- a/ProductCatalogService/appsettings.json
+++ b/ProductCatalogService/appsettings.json
@@ -5,9 +5,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ProductsDatabase": {
-        "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "ECommerce",
+    "ProductsDatabaseSettings": {
+        "ConnectionString": "mongodb+srv://<jumagbasmarlowe>:<nocturne127>@cytus.rhxi9.mongodb.net/?retryWrites=true&w=majority&appName=Cytus",
+        "DatabaseName": "Cytus",
         "ProductsCollectionName": "Products"
     },
     "AllowedHosts": "*"
